@@ -1,6 +1,6 @@
 // TortoiseSVN - a Windows shell extension for easy version control
 
-// Copyright (C) 2007 - TortoiseSVN
+// Copyright (C) 2007-2008 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -30,6 +30,11 @@ public:
 	 * Executes the command.
 	 */
 	virtual bool			Execute();
+private:
+	bool					RenameWithReplace(HWND hWnd, const CTSVNPathList& srcPathList, 
+											const CTSVNPath& destPath, 
+											BOOL force, const CString& message = _T(""), 
+											bool move_as_child = false, bool make_parents = false);
 };
 
 
